--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "task-manager-backend",
   "version": "1.0.0",
   "main": "index.js",
+  "start": "node index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
